xlb/gateway.yaml
# Regional XLB configuration
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: xlb-gateway
  namespace: istio-system
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: edge-http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
  - name: edge-https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: httpbin-credential
  addresses:
  - type: NamedAddress
    value: gateway-ip
---
# HTTP -> HTTPS redirect. See https://gateway-api.sigs.k8s.io/guides/http-redirect-rewrite/#http-to-https-redirects
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge-http-filter-redirect
  namespace: istio-system
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-system
    sectionName: edge-http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
---
# Route traffic from edge to mesh
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: edge2mesh 
  namespace: asm-ingress
  labels:
    gateway: xlb-gateway
spec:
  parentRefs:
  - name: xlb-gateway
    namespace: istio-system
    sectionName: edge-https
  rules:
    - backendRefs:
      - name: asm-ingressgateway
        port: 8443
